--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,16 +7,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.baseurl }}/"><img alt="shipcloud logo" src="{{ site.baseurl }}/assets/images/logos/shipcloud_logo.png"></a>
+      <a class="navbar-brand" href="{{ site.url }}/"><img alt="shipcloud logo" src="{{ site.url }}/assets/images/logos/shipcloud_logo.png"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li{% if page.url contains "/concepts/" %} class="active"{% endif %}><a href="{{ site.baseurl }}/concepts">Concepts</a></li>
-        <li{% if page.url contains "/integrations/" %} class="active"{% endif %}><a href="{{ site.baseurl }}/integrations">Integrations</a></li>
-        <li{% if page.url contains "/examples/" %} class="active"{% endif %}><a href="{{ site.baseurl }}/examples">Examples</a></li>
-        <li{% if page.url contains "/reference/" %} class="active"{% endif %}><a href="{{ site.baseurl }}/reference">API Reference</a></li>
+        <li{% if page.url contains "/concepts/" %} class="active"{% endif %}><a href="{{ site.url }}/concepts">Concepts</a></li>
+        <li{% if page.url contains "/integrations/" %} class="active"{% endif %}><a href="{{ site.url }}/integrations">Integrations</a></li>
+        <li{% if page.url contains "/examples/" %} class="active"{% endif %}><a href="{{ site.url }}/examples">Examples</a></li>
+        <li{% if page.url contains "/reference/" %} class="active"{% endif %}><a href="{{ site.url }}/reference">API Reference</a></li>
         <li><a href="https://app.shipcloud.io/de/users/sign_up?plan=developer" class="register btn">Register as a developer</a></li>
-        <li{% if page.url == "/support/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/support">Support</a></li>
+        <li{% if page.url == "/support/index.html" %} class="active"{% endif %}><a href="{{ site.url }}/support">Support</a></li>
       </ul>
     </div>
   </div>
