add automatic side bar and entry descriptions via includes

--- a/_layouts/full.html
+++ b/_layouts/full.html
@@ -21,6 +21,8 @@
               {% include navs/concepts_nav.html %}
             {% elsif page.nav == "examples" %}
               {% include navs/examples_nav.html %}
+            {% elsif page.nav == "carriers" %}
+              {% include navs/carriers_nav.html %}
             {% endif %}
           </div>
         {% else %}
