--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
                 {% include navs/concepts_nav.html %}
               {% elsif page.nav == "examples" %}
                 {% include navs/examples_nav.html %}
+              {% elsif page.nav == "carriers" %}
+                {% include navs/carriers_nav.html %}
               {% endif %}
             </div>
           {% else %}
