--- a/_includes/navs/carriers_nav.html
+++ b/_includes/navs/carriers_nav.html
@@ -2,22 +2,26 @@
 {% assign interfaces=site.data.carriers[page.carrier].interfaces %}
 {% assign detailed_services = "additional_services, services" | split: ", " %}
 
+<div id="sub-nav" data-spy="affix">
+
 {% for interface in interfaces %}
-    {{ interface[1].name }}
+    {{ interface[1].display_name }}
     {% assign interface_name=interface[0] %}
     {% assign implementations=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud %}
     <!-- {% assign entries=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud.services %} -->
-    <ul>
+    <ul class="nav">
         {% for implementation in implementations %}
             {% assign implementation_name=implementation[0] %}
             {% if detailed_services contains implementation_name %}
                 {% assign entries=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud.[implementation_name] %}
                 <li>
-                    {{ implementation_name | replace: '_', ' ' | capitalize }}
-                    <ul>
+                    <a href="#{{ interface_name }}-{{ implementation_name }}">
+                        {{ implementation_name | replace: '_', ' ' | capitalize }}
+                    </a>
+                    <ul class="nav">
                         {% for entry in entries %}
                         <li>
-                            <a href="#{{ interface_name }}-{{ entry.key | replace: '_', '-' }}">
+                            <a href="#{{ interface_name }}---{{ entry.key | replace: '_', '-' }}">
                                 {{ entry.display_name }}
                             </a>
                         </li>
@@ -34,3 +38,5 @@
         {% endfor %}
     </ul>
 {% endfor %}
+
+</div>
