--- a/_includes/examples/carriers/services/standard.html
+++ b/_includes/examples/carriers/services/standard.html
@@ -1,17 +1,12 @@
 The most basic service. Normal ground shipping without any modifier to speed up 
 the shipping time.
 
-<div class="panel-group" id="{{include.carrier_interface}}_service_standard_togglebox">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#{{include.carrier_interface}}_service_standard_togglebox" href="#{{include.carrier_interface}}_service_standard_togglebox_collapsable">
-          <i class="fas fa-chevron-down"></i> Example
-        </a>
-      </h4>
-    </div>
-    <div id="{{include.carrier_interface}}_service_standard_togglebox_collapsable" class="panel-collapse collapse">
-      <div class="panel-body">
+<a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_service_standard_togglebox" aria-expanded="false" aria-controls="collapseExample">
+  Show example
+</a>
+
+<div id="{{include.carrier_interface}}_service_standard_togglebox" class="panel-collapse collapse">
+<div class="well">
 {% highlight http %}
 POST https://api.shipcloud.io/v1/shipments
 {% endhighlight %}
@@ -49,7 +44,5 @@ POST https://api.shipcloud.io/v1/shipments
   "create_shipping_label": true
 }
 {% endhighlight %}
-      </div>
-    </div>
-  </div>
+</div>
 </div>
