--- a/_includes/navs/carriers_nav.html
+++ b/_includes/navs/carriers_nav.html
@@ -5,7 +5,9 @@
 <div id="sub-nav" data-spy="affix">
 
 {% for interface in interfaces %}
-    {{ interface[1].display_name }}
+    <a href="#{{ interface[1].display_name | slugify }}">  
+        {{ interface[1].display_name }}
+    </a>
     {% assign interface_name=interface[0] %}
     {% assign implementations=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud %}
     <!-- {% assign entries=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud.services %} -->
@@ -15,13 +17,13 @@
             {% if detailed_services contains implementation_name %}
                 {% assign entries=site.data.carriers[page.carrier].interfaces.[interface_name].implementations.shipcloud.[implementation_name] %}
                 <li>
-                    <a href="#{{ interface_name }}-{{ implementation_name | replace: '_', '-' }}">
+                    <a href="#{{ interface_name | replace: '_', '-' }}-{{ implementation_name | replace: '_', '-' }}">
                         {{ implementation_name | replace: '_', ' ' | capitalize }}
                     </a>
                     <ul class="nav">
                         {% for entry in entries %}
                         <li>
-                            <a href="#{{ interface_name }}---{{ entry.key | replace: '_', '-' }}">
+                            <a href="#{{ interface_name | replace: '_', '-' }}---{{ entry.key | replace: '_', '-' }}">
                                 {{ entry.display_name }}
                             </a>
                         </li>
@@ -30,7 +32,7 @@
                 </li>
             {% else %}
                 <li>
-                    <a href="#{{ interface_name }}-{{ implementation_name | replace: '_', '-' }}">
+                    <a href="#{{ interface_name | replace: '_', '-' }}-{{ implementation_name | replace: '_', '-' }}">
                         {{ implementation_name  | replace: '_', ' ' | capitalize}}
                     </a>
                 </li>
