move headline definition for standard service to include

--- a/_includes/examples/carriers/services/standard.html
+++ b/_includes/examples/carriers/services/standard.html
@@ -1,3 +1,5 @@
+<h4 id="{{ include.carrier_interface | slugify }}---standard">Standard</h4>
+
 The most basic service. Normal ground shipping without any modifier to speed up 
 the shipping time.
 
