move headline definition for returns service to include

--- a/_includes/examples/carriers/services/returns.html
+++ b/_includes/examples/carriers/services/returns.html
@@ -1,3 +1,5 @@
+<h4 id="{{ include.carrier_interface | slugify }}---returns">Returns</h4>
+
 A shipment that the customer sends back to the store / sender
 
 <a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_service_returns_togglebox" aria-expanded="false" aria-controls="collapseExample">
