--- a/_includes/examples/carriers/services/one_day.html
+++ b/_includes/examples/carriers/services/one_day.html
@@ -1,3 +1,5 @@
+<h4 id="{{ include.carrier_interface | slugify }}---one-day">One day</h4>
+
 Express shipment that will be delivered the next working day
 
 <a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_service_one_day_togglebox" aria-expanded="false" aria-controls="collapseExample">
