--- a/_includes/examples/carriers/services/one_day_early.html
+++ b/_includes/examples/carriers/services/one_day_early.html
@@ -1,3 +1,5 @@
+<h4 id="{{ include.carrier_interface | slugify }}---one-day-early">One day early</h4>
+
 Express shipment that will be delivered the next working day before noon
 
 <a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_service_one_day_early_togglebox" aria-expanded="false" aria-controls="collapseExample">
