--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -248,3 +248,15 @@ pre {
   height: 75px;
   visibility: hidden;
 }
+
+.flex_container {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+        flex-basis: 350px;
+        margin: 0 25px 0 0;
+        min-height: 100px;
+        position: relative;
+    }
+}
