added package_type definitions

--- a/_includes/examples/carriers/package_types/parcel.html
+++ b/_includes/examples/carriers/package_types/parcel.html
@@ -1,18 +1,12 @@
-#### Parcel letter
-{: #shipment-service-3-2---parcel-letter}
+<h4 id="{{ include.carrier_interface | slugify }}---parcel">Parcel</h4>
 
-DPD defines parcel letters as "everything which is too small for a parcel but larger and heavier 
-than a classical letter"
+The most basic package type for shipping parcels there is.
 
-__Requirements:__
-
-- `package.type` has to be _'parcel_letter'_
-
-<a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_parcel_letter_togglebox_collapsable" aria-expanded="false" aria-controls="collapseExample">
+<a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#{{include.carrier_interface}}_package_type_parcel_togglebox" aria-expanded="false" aria-controls="collapseExample">
   Show example
 </a>
 
-<div id="{{include.carrier_interface}}_parcel_letter_togglebox_collapsable" class="panel-collapse collapse">
+<div id="{{include.carrier_interface}}_package_type_parcel_togglebox" class="panel-collapse collapse">
 <div class="well">
 {% highlight http %}
 POST https://api.shipcloud.io/v1/shipments
@@ -41,12 +35,12 @@ POST https://api.shipcloud.io/v1/shipments
   },
   "package": {
     "weight": 0.5,
-    "length": 25,
-    "width": 36,
+    "length": 20,
+    "width": 15,
     "height": 5,
-    "type": "parcel_letter"
+    "type": "parcel"
   },
-  "carrier": "dpd",
+  "carrier": "{{page.carrier}}",
   "service": "standard",
   "create_shipping_label": true
 }
