--- a/_includes/navs/carriers_nav.html
+++ b/_includes/navs/carriers_nav.html
@@ -1,6 +1,6 @@
 <!-- {{page.carrier}} -->
 {% assign interfaces=site.data.carriers[page.carrier].interfaces %}
-{% assign detailed_services = "additional_services, services, other_attributes" | split: ", " %}
+{% assign detailed_services = "additional_services, services, package_types, other_attributes" | split: ", " %}
 
 <div id="sub-nav" data-spy="affix">
 
