--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,16 +80,18 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Aeroportal', arial, sans-serif;
-  margin-top: $spacing-unit;
+//   margin-top: $spacing-unit;
   font-weight: 700;
 }
 
 h1 {
   display: inline-block;
   color: white;
-  font-size: 50px;
-  line-height: 50px;
+//   font-size: 50px;
+//   line-height: 50px;
+  font-size: 5rem;
   font-weight: 700;
+  margin-top: $spacing-unit;
   text-align: left;
   padding: 10px 10px 5px 10px;
   letter-spacing: 0px;
@@ -101,9 +103,23 @@ h1:nth-of-type(1) {
   margin-top: 0;
 }
 
+h2 {
+  font-size: 4rem;
+  margin-top: $spacing-unit;
+}
+
+h3 {
+  font-size: 3rem;
+  margin-top: $spacing-unit * 2;
+}
+
 h4 {
   font-size: 2rem;
-  text-decoration: underline;
+  margin-top: $spacing-unit * 1.5;
+}
+
+h3 + h4 {
+  margin-top: 0;
 }
 
 .wrapper h1:nth-child(1) {
